Refactored database schema, consequentely changed webapp and nodeserver
