# NodeServer/src/accounts/accounts.controller.js
@@ -77,11 +77,14 @@ function revokeToken(req, res, next) {
         .catch(next);
 }
 
+// Note: only during registration I need also user information (to create the user associated with the account)
 function registerSchema(req, res, next) {
     const schema = Joi.object({
-        title: Joi.string().required(),
-        firstName: Joi.string().required(),
-        lastName: Joi.string().required(),
+        name: Joi.string().required(),                  // user info
+        surname: Joi.string().required(),               // user info
+        userType: Joi.string().required(),              // user info
+        // dateOfBirth: Joi.date().required(),             // user info
+        // sex: Joi.string(),                              // user info
         email: Joi.string().email().required(),
         password: Joi.string().min(6).required(),
         confirmPassword: Joi.string().valid(Joi.ref('password')).required(),
@@ -169,9 +172,6 @@ function getById(req, res, next) {
 
 function createSchema(req, res, next) {
     const schema = Joi.object({
-        title: Joi.string().required(),
-        firstName: Joi.string().required(),
-        lastName: Joi.string().required(),
         email: Joi.string().email().required(),
         password: Joi.string().min(6).required(),
         confirmPassword: Joi.string().valid(Joi.ref('password')).required(),
@@ -188,9 +188,6 @@ function create(req, res, next) {
 
 function updateSchema(req, res, next) {
     const schemaRules = {
-        title: Joi.string().empty(''),
-        firstName: Joi.string().empty(''),
-        lastName: Joi.string().empty(''),
         email: Joi.string().email().empty(''),
         password: Joi.string().min(6).empty(''),
         confirmPassword: Joi.string().valid(Joi.ref('password')).empty('')
